# miketang84-forum002

./: .dockerignore  .env.example  .plan  Cargo.toml  Dockerfile  PRODUCT.md  README.md  docker-compose.yml  tailwind.config.js
assets/css/: app.css
migrations/: 20260509073700_create_users.sql  20260509074100_create_sessions.sql  20260509083000_create_categories.sql  20260509084500_create_threads_and_posts.sql  20260509085000_add_deleted_by_to_posts.sql  20260509090000_add_deleted_at_to_threads.sql  20260509091000_add_csrf_token_to_sessions.sql  20260509091500_add_search_tsv_columns.sql
scripts/: build-tailwind.sh
src/: auth.rs  category_store.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  password.rs  profile_store.rs  search_store.rs  session_store.rs  templates.rs  thread_store.rs
src/models/: category.rs  mod.rs  post.rs  session.rs  thread.rs  user.rs
static/css/: app.css
templates/: _csrf_input.html  admin_categories.html  admin_users.html  base.html  category.html  edit_post.html  edit_profile.html  error.html  home.html  login.html  new_thread.html  profile.html  register.html  search.html  thread.html
